Add intellij instructions
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/1-2.md
+++ b/site/docs/release-notes/1-2.md
@@ -23,23 +23,23 @@ Below are the highlights:
      * The [IBM Information Governance Catalog repository proxy](https://github.com/odpi/egeria-connector-ibm-information-server).
 
 * There are new access services to support the cataloging of assets:
-   * The [Asset Consumer OMAS](../open-metadata-implementation/access-services/asset-consumer) supports the access to both the data and metadata associated with an asset.
-   * The [Asset Owner OMAS](../open-metadata-implementation/access-services/asset-owner) supports the manual cataloging of new Assets.
+   * The [Asset Consumer OMAS](/services/omas/asset-consumer/overview) supports the access to both the data and metadata associated with an asset.
+   * The [Asset Owner OMAS](/services/omas/asset-owner/overview) supports the manual cataloging of new Assets.
   
   The assets cataloged by these access services can be scoped by governance zones.
   
 * The metadata servers and future governance servers running on the OMAG Server Platform
-  support [metadata-centric security](../open-metadata-implementation/common-services/metadata-security)
+  support [metadata-centric security](/services/metadata-security-services)
   that is controlled by a connector.  This connector can validate access to individual servers,
   services, and assets based on the identity of the caller and the service or asset
   they wish to access.
   
-* The [Open Metadata Repository Services (OMRS)](../open-metadata-implementation/repository-services)
+* The [Open Metadata Repository Services (OMRS)](/services/omrs)
   have been enhanced to support support dynamic types and type patching.
   There is also function to load archives of metadata instances.
      
 * There are [tutorials](../open-metadata-resources/open-metadata-tutorials),
-  [hands-on labs](../open-metadata-resources/open-metadata-labs/overview) and
+  [hands-on labs](/education/open-metadata-labs/overview) and
   [samples](../open-metadata-resources/open-metadata-samples) demonstrating
   the new Asset cataloging capabilities.
 
@@ -47,7 +47,7 @@ Below are the highlights:
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.2.png)
  
- Link to Egeria's [Roadmap](/release-notes/roadmap/) for more details about the
+ Link to Egeria's [Roadmap](/release-notes/roadmap) for more details about the
  Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
