--- a/site/docs/release-notes/3-8.md
+++ b/site/docs/release-notes/3-8.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 3.7 (April 2022)
+# Release 3.8 (Planned for May 2022)
 
 Content to be updated.
 
