git369 update release process for react ui
Signed-off-by: David Radley <dgradley@gmail.com>

--- a/site/docs/release-notes/3-7.md
+++ b/site/docs/release-notes/3-7.md
@@ -5,4 +5,10 @@
 
 Content to be updated.
 
+???+ functional "Functional changes"
+The Egeria Ecosystem (React) UI has been updated to use new SSL certificates. These certificates are now validated.
+Some improvements have been made to the Egeria Ecosystem (React) UI server author, around access service configuration.
+
+
+
 --8<-- "snippets/abbr.md"
