Add info on container changes to 3.7 release notes
Signed-off-by: Nigel Jones <nigel.l.jones+git@gmail.com>

--- a/site/docs/release-notes/3-7.md
+++ b/site/docs/release-notes/3-7.md
@@ -6,9 +6,50 @@
 Content to be updated.
 
 ???+ functional "Functional changes"
-The Egeria Ecosystem (React) UI has been updated to use new SSL certificates. These certificates are now validated.
-Some improvements have been made to the Egeria Ecosystem (React) UI server author, around access service configuration.
+
+    ???+ "Self-signed certificates"
+        Egeria uses pre-generated self-signed certificates by default.
+
+        These must be replaced for production deployments.
+
+        During March 2022 these certificates expired. These have now been updated.
+
+        See [here](http://egeria-project.org/guides/admin/omag-server-platform-transport-level-security/?h=tls#tls-protocol) for more information.
+
+    ??? "Ecosystem UI"
+
+        The Egeria Ecosystem (React) UI has been updated to use new SSL certificates. These certificates are now validated.
+
+        Some improvements have been made to the Egeria Ecosystem (React) UI server author, around access service configuration.
 
 
+??? functional "Helm Charts"
+
+    ??? info "Lab Chart for 3.7"
+
+         The Egeria lab chart 3.7.0 has been updated to include:
+
+         * Egeria 3.7
+         * Egeria Ecosystem UI 3.5.0
+         * Egeria Business UI 3.2.0
+
+    ??? info "Base Chart for 3.7"
+
+         The Egeria base chart 3.7.0 has been updated to include:
+
+         * Egeria 3.7
+         * Egeria Ecosystem UI 3.5.0
+
+    ??? info "CTS & PTS Charts for 3.7"
+
+         * Updated to use Egeria 3.7
+         * Now supports in-memory repository
+         * A bug preventing the graph repository due to overwriting LOADER_PATH has been fixed
+         * Defaults to requiring 4GB memory/1 CPU minimum (was 8GB / 2 CPU)
+         * Now uses strimzi as the Kafka implementation - the same as our other charts.
+ 
+???+ functional "Documentation"
+    Our [documentation site ](https://egeria-project.org) continues to improve. Recent updates include
+    more Dojo content (under 'Learning').
 
 --8<-- "snippets/abbr.md"
