--- a/site/docs/release-notes/3-7.md
+++ b/site/docs/release-notes/3-7.md
@@ -25,6 +25,12 @@ Content to be updated.
 
 ??? functional "Helm Charts"
 
+    The below points refer to chart versions 3.7.0.
+
+    These may get updated more frequently than Egeria code releases, as we integrate other components and fix bugs.
+
+    You can always check the latest with `helm repo update && helm search repo egeria `
+
     ??? info "Lab Chart for 3.7"
 
          The Egeria lab chart 3.7.0 has been updated to include:
