#404 update docs and release notes
Signed-off-by: David Radley <dgradley@gmail.com>

--- a/site/docs/release-notes/3-8.md
+++ b/site/docs/release-notes/3-8.md
@@ -3,6 +3,9 @@
 
 # Release 3.8 (May 2022)
 
-Content to be updated.
+* The Eco system UI (React UI) has a new capability. You can now issue queries in the past and 
+if the repository supports it you can work with Rex at a time in the past. This cabability is available in
+release [3.8.1](https://github.com/odpi/egeria/releases/tag/V3.8.1). 3.8 has a bug such that the Repository Explorer Explore button errors
+in many scenarios.
 
 --8<-- "snippets/abbr.md"
