odpi/egeria#6539 Initial 3.9 release notes
Signed-off-by: Nigel Jones <nigel.l.jones+git@gmail.com>

--- a/site/docs/release-notes/3-6.md
+++ b/site/docs/release-notes/3-6.md
@@ -15,6 +15,7 @@
          The JavaDoc for external interfaces on core Egeria is now published to [https://odpi.github.io/egeria/](https://odpi.github.io/egeria/) . The list of classes published is still being adjusted, also this URL is likely to change, to allow for more generated content.
 
 ???+ bugs "Bug fixes and other updates"
-    For details, see the [Github release note for 3.6](https://github.com/odpi/egeria/releases/tag/V3.6) and the full [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
+
+    For details, see the [Github release note for 3.6](https://github.com/odpi/egeria/releases/tag/V3.6){ target=gh } and the full [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
 
 --8<-- "snippets/abbr.md"
