--- a/site/docs/release-notes/3-8.md
+++ b/site/docs/release-notes/3-8.md
@@ -3,11 +3,23 @@
 
 # Release 3.8 (May 2022)
 
-* The [Egeria Ecosystem UI](/user-interfaces/ecosystem) has a new 'historical query' capability. You can now issue queries in the past and 
-if the repository supports it you can work with Rex at a time in the past. See the [Repsotory Explorer user guide](/guides/ecosystem-ui/rex-user-guide) for how to use
-  the repository explorer. 
+??? warning "Known Issues"
+
+    ??? info "Use chromium-based browser for UIs"
+         It is recommended to use a chromium-based browser such as Google Chrome, Microsoft Edge or Apple Safari for the Egeria Ecosystem UI. Some parts of the UI experience such as Dino currently experience problems with Firefox. See [odpi/egeria-react-ui#96 :material-dock-window:](https://github.com/odpi/egeria-react-ui/issues/96){ target=gh }.
+
+???+ functional "Functional changes"
+
+    ???+ "Historical Query"
+      The [Egeria Ecosystem UI](/user-interfaces/ecosystem) has a new 'historical query' capability. You can now issue queries in the past and 
+      if the repository supports it you can work with Rex at a time in the past. See the [Repsotory Explorer user guide](/guides/ecosystem-ui/rex-user-guide) for how to use
+      the repository explorer. 
   
-Historical query is available in release [3.8.1](https://github.com/odpi/egeria/releases/tag/V3.8.1). 3.8 has a bug such that the Repository Explorer Explore button errors
-in many scenarios.
+      Historical query is available in release [3.8.1](https://github.com/odpi/egeria/releases/tag/V3.8.1). 3.8 has a bug such that the Repository Explorer Explore button errors
+      in many scenarios.
+
+???+ bugs "Bug fixes and other updates"
+
+    For details, see the [Github release note for 3.8](https://github.com/odpi/egeria/releases/tag/V3.8){ target=gh } and the full [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
 
 --8<-- "snippets/abbr.md"
