--- a/site/docs/release-notes/3-7.md
+++ b/site/docs/release-notes/3-7.md
@@ -3,7 +3,10 @@
 
 # Release 3.7 (April 2022)
 
-Content to be updated.
+??? warning "Known Issues"
+
+    ??? info "Use chromium-based browser for UIs"
+         It is recommended to use a chromium-based browser such as Google Chrome, Microsoft Edge or Apple Safari for the Egeria Ecosystem UI. Some parts of the UI experience such as Dino currently experience problems with Firefox. See [odpi/egeria-react-ui#96 :material-dock-window:](https://github.com/odpi/egeria-react-ui/issues/96){ target=gh }.
 
 ???+ functional "Functional changes"
 
@@ -55,7 +58,13 @@ Content to be updated.
          * Now uses strimzi as the Kafka implementation - the same as our other charts.
  
 ???+ functional "Documentation"
+
     Our [documentation site ](https://egeria-project.org) continues to improve. Recent updates include
     more Dojo content (under 'Learning').
+
+???+ bugs "Bug fixes and other updates"
+
+    For details, see the [Github release note for 3.7](https://github.com/odpi/egeria/releases/tag/V3.7){ target=gh } and the full [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
+
 
 --8<-- "snippets/abbr.md"
