#odpi/egeria#6539 correct typos in 3.9 notes
Signed-off-by: Nigel Jones <nigel.l.jones+git@gmail.com>

--- a/site/docs/release-notes/3-9.md
+++ b/site/docs/release-notes/3-9.md
@@ -5,7 +5,7 @@
 
 ??? warning "Known Issues"
 
-    ??? info "Use chromium-based browser for UIs"
+    ??? info "Use chromium-based or Safari browser for UIs"
          It is recommended to use a chromium-based browser such as Google Chrome, Microsoft Edge or Apple Safari for the Egeria Ecosystem UI. Some parts of the UI experience such as Dino currently experience problems with Firefox. See [odpi/egeria-react-ui#96 :material-dock-window:](https://github.com/odpi/egeria-react-ui/issues/96){ target=gh }.
 
 ???+ functional "Functional changes"
@@ -38,7 +38,7 @@
          * Strimzi 0.29
 
 
-    ??? info "CTS & PTS Charts for 3.7"
+    ??? info "CTS & PTS Charts for 3.9"
 
          * Egeria 3.9
          * Strimzi 0.29
