Add new ProfileLocation type to release notes
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/3-11.md
+++ b/site/docs/release-notes/3-11.md
@@ -62,6 +62,9 @@ The notes will be updated until & when 3.11 is released**_
 
 ??? functional "Functional changes"
 
+    ??? info "Open Metadata Types"
+
+        The **ProfileLocation** relationship between **ActorProfile**  and **Location** has been added to model [0110 Actors](/types/1/0110-Actors).
 
     ??? info "Server startup behaviour when kafka unavailable"
 
