Update valid values
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/3-11.md
+++ b/site/docs/release-notes/3-11.md
@@ -64,7 +64,9 @@ The notes will be updated until & when 3.11 is released**_
 
     ??? info "Open Metadata Types"
 
-        The **ProfileLocation** relationship between **ActorProfile**  and **Location** has been added to model [0110 Actors](/types/1/0110-Actors).
+        * The **ProfileLocation** relationship between **ActorProfile**  and **Location** has been added to model [0110 Actors](/types/1/0110-Actors).
+        * New parameters `stewardTypeName` and `stewardPropertyName` have been added to the **ValidValuesMapping** and **ReferenceValueAssignment** to allow the steward to be represented by a UserIdentity, a PersonRile or an ActorProfile.  See model [0545](/types/5/0545-Reference-Data).
+        * The **ValidValuesImplementation*8 becomes a multi-link relationship.
 
     ??? info "Server startup behaviour when kafka unavailable"
 
