--- a/site/docs/release-notes/3-11.md
+++ b/site/docs/release-notes/3-11.md
@@ -64,9 +64,10 @@ The notes will be updated until & when 3.11 is released**_
 
     ??? info "Open Metadata Types"
 
-        * The **ProfileLocation** relationship between **ActorProfile**  and **Location** has been added to model [0110 Actors](/types/1/0110-Actors).
+        * The **ProfileLocation** relationship between **ActorProfile** and **Location** has been added to model [0110 Actors](/types/1/0110-Actors).
+        * The **AssignmentScope** relationship between two **Referenceable** entities has been added to model [0120 Assignment Scopes](/types/1/0120-Assignment-Scopes).  The [ProjectScope](/types/1/130-Projects) and [GovernanceRoleAssignment](/types/4/0445-Governance-Roles) relationships are deprecated in favour of this new relationship.
         * New parameters `stewardTypeName` and `stewardPropertyName` have been added to the **ValidValuesMapping** and **ReferenceValueAssignment** to allow the steward to be represented by a UserIdentity, a PersonRile or an ActorProfile.  See model [0545](/types/5/0545-Reference-Data).
-        * The **ValidValuesImplementation*8 becomes a multi-link relationship.
+        * The [**ValidValuesImplementation**](/types/5/0545-Reference-Data) becomes a multi-link relationship.
 
     ??? info "Server startup behaviour when kafka unavailable"
 
