Added details for http headers propagation
Signed-off-by: Iliescu Cristian-Mihai <cristianmihaiiliescu@gmail.com>

--- a/site/docs/release-notes/3-11.md
+++ b/site/docs/release-notes/3-11.md
@@ -50,11 +50,15 @@
 
 ??? functional "Additional HTTP headers can now be passed to security plugins"
 
-    Additional HTTP headers can now be passed to security plugins, and will also be propogated on federated queries
+    Additional HTTP headers can now be passed to security plugins, and will also be propogated on federated queries.
 
-    See [odpi/egeria#5700](https://github.com/odpi/egeria/issues/5700){ target=gh } for the implementation.
+    See [odpi/egeria#5700](https://github.com/odpi/egeria/issues/5700){ target=gh } for the implementation discussion.
 
-    These notes will be updated with further information as it becomes available. 
+    How it works:
+
+    * When header.name.list is set, the HttpRequestHeadersFilter puts all specified headers in a ThreadLocal variable.
+    * ThreadLocal ensures headers consistency between different requests (threads). The HttpHeadersThreadLocal class which holds the ThreadLocal is in the http-helper module; therefore this functionality can be used in any module that includes http-helper.
+
     
 ??? functional "Helm charts - Installing multiple charts on the same k8s cluster"
 
