moved the technical details on the designated page and rephrased the initial release description
Signed-off-by: Iliescu Cristian-Mihai <cristianmihaiiliescu@gmail.com>

--- a/site/docs/release-notes/3-11.md
+++ b/site/docs/release-notes/3-11.md
@@ -50,16 +50,14 @@
 
 ??? functional "Additional HTTP headers can now be passed to security plugins"
 
-    Additional HTTP headers can now be passed to security plugins, and will also be propogated on federated queries.
+    Additional HTTP headers can now be passed to security plugins and propagated on federated queries.
 
     See [odpi/egeria#5700](https://github.com/odpi/egeria/issues/5700){ target=gh } for the implementation discussion.
 
-    How it works:
+    This new functionality allows developers to use whatever headers are needed for security checks. The configuration consists of just declaring the headers that are needed in the application properties. 
 
-    * When header.name.list is set, the HttpRequestHeadersFilter puts all specified headers in a ThreadLocal variable.
-    * ThreadLocal ensures headers consistency between different requests (threads). The HttpHeadersThreadLocal class which holds the ThreadLocal is in the http-helper module; therefore this functionality can be used in any module that includes http-helper.
+    For more technical details please check the dedicated [section](/guides/admin/configuring-the-omag-server-platform/#additional-http-headers).
 
-    
 ??? functional "Helm charts - Installing multiple charts on the same k8s cluster"
 
     The charts have been updated to allow multiple installs on the same cluster. Previously this was not possible due to the default Strimzi install (included in the charts below) creating a cluster-wide resource.
