Add type changes to relase notes
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/3-12.md
+++ b/site/docs/release-notes/3-12.md
@@ -1,9 +1,12 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 3.12 (Planned for October 2022)
+# Release 3.12 (October 2022)
 
-_**These are DRAFT release notes, initially copied from the previous release
-The notes will be updated until & when 3.12 is released**_
+
+??? functional "Open Metadata Types"
+
+    * The *ProcessingState* classification for *SoftwareCapabilities** has been added to model [0042 Software Capabilities](/types/0/0042-Software-Capabilities).
+    * The *RootSchemaType* entity has been added to model [0530 Tabular Schemas](/types/5/0530-Tabular-Schemas).  This acts as a common super type for *SchemaTypes* that represent the root element of a schema that attaches to an Asset, Port etc.  The following subtypes of *SchemaType* now inherit from *RootSchemaType*: [TabularSchemaType](/types/5/0530-Tabular-Schemas), [DocumentSchemaType](/types/5/0531-Document-Schemas), [ObjectSchemaType](/types/5/0532-Object-Schemas), [RelationalDBSchemaType](/types/5/0534-Relational-Schemas), [EventType](/types/5/0535-Event-Schemas), [APISchemaType](/types/5/0536-API-Schemas), [DisplayDataSchemaType](/types/5/0537-Display-Schemas), and [QuerySchemaType](/types/5/0537-Display-Schemas).
 
 --8<-- "snippets/abbr.md"
