Updates to data store descriptions
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/3-12.md
+++ b/site/docs/release-notes/3-12.md
@@ -75,6 +75,10 @@
          * Egeria 3.12
          * Strimzi 0.31.1 with Kafka 3.2.2
 
+??? functional "Improved metadata security performance"
+
+    Egeria's [server metadata security connector](/concepts/server-metadata-security-connector) includes an optional interface that allows specific authorization checking for requests that involve an asset.  The connector has its own bean to describe the asset that can be built from the asset's entity and its classifications.  In this release, the building of this asset bean has been moved from the [generic handlers]()  
+
 ??? bugs "Bug fixes and other updates"
 
     For details on core Egeria changes, see the [GitHub release note for 3.12](https://github.com/odpi/egeria/releases/tag/V3.12){ target=gh } and the full [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
