Update slack url (#488) and metadata instances
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/2-6.md
+++ b/site/docs/release-notes/2-6.md
@@ -120,7 +120,7 @@ Open Metadata and Governance vision, strategy and content.
 
 # Further Help and Support
 
-As part of the Linux AI & Data Foundation, our slack channels have moved to the [LF AI & Data Slack workspace](https://slack.lfai.foundation/){ target=lf }, and our mailing lists can now be found at https://lists.lfaidata.foundation/groups
+As part of the Linux AI & Data Foundation, our Slack channels have moved to the [LF AI & Data Slack workspace](https://slack.lfaidata.foundation){ target=lf }, and our mailing lists can now be found at https://lists.lfaidata.foundation/groups
 
 Continue to use these resources, along with GitHub to report bugs or ask questions.
 
