Fix links to github
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/1-1.md
+++ b/site/docs/release-notes/1-1.md
@@ -9,7 +9,7 @@ There is also a new JanusGraph based metadata repository.
 
 Below are the highlights:
 
-* A [persistent metadata repository](../open-metadata-implementation/adapters/open-connectors/repository-services-connectors/open-metadata-collection-store-connectors/graph-repository-connector) based on JanusGraph.
+* A [persistent metadata repository](/connectors/repository/janus-graph/overview) based on JanusGraph.
 
 * A multi-tenant [OMAG Server Platform](/concepts/omag-server/)
   that is able to host one to many metadata servers and/or governance servers.
