--- a/site/docs/release-notes/1-3.md
+++ b/site/docs/release-notes/1-3.md
@@ -23,9 +23,9 @@ Below are the highlights of the 1.3 release:
    * There is a new collection of [Annotations](/types/6/0655-Asset-Deduplication) for recording suspected duplicates and divergent values in acknowledged duplicates.
      This is to support the asset deduplication work scheduled for the next release.
 
-* There are new [open metadata archive](../open-metadata-resources/open-metadata-archives) utilities for creating your own open metadata archives.
-  See the [open connector archives](../open-metadata-resources/open-metadata-archives/open-connector-archives) and
-  [design model archives](../open-metadata-resources/open-metadata-archives/design-model-archives).
+* There are new [open metadata archive](/concepts/open-metadata-archive) utilities for creating your own open metadata archives.
+  See the [open connector archives](https://github.com/odpi/egeria/tree/main/open-metadata-resources/open-metadata-archives/open-connector-archives) and
+  [design model archives](https://github.com/odpi/egeria/tree/main/open-metadata-resources/open-metadata-archives/design-model-archives).
 
 * The Conformance Suite Repository Workbench is now at Version 1.1, with the following enhancements:
 
