--- a/site/docs/release-notes/1-7.md
+++ b/site/docs/release-notes/1-7.md
@@ -9,7 +9,7 @@ Below are the highlights:
 
 * There is support for loading standard glossaries and design models coded in OWL/JSON-LD into
   the open metadata ecosystem.  The input file is converted to an
-  [Open Metadata Archive](../open-metadata-resources/open-metadata-archives) which can be loaded directly
+  [Open Metadata Archive](https://github.com/odpi/egeria/tree/main/open-metadata-resources/open-metadata-archives) which can be loaded directly
   into a metadata server.
 
 * Many dependencies have been updated including:
