--- a/site/docs/release-notes/2-6.md
+++ b/site/docs/release-notes/2-6.md
@@ -92,11 +92,11 @@ Enterprise queries are now the default, but can be over-ridden to perform a loca
 ### New Helm Chart
 
 In addition to our 'lab' helm chart to support the Coco Pharmaceuticals environment, we have now added an [additional
-helm chart](../open-metadata-resources/open-metadata-deployment/egeria-base) which provides a simpler environment with just a single platform, and a single server, but configured with 
+helm chart](https://github.com/odpi/egeria/tree/main/open-metadata-resources/open-metadata-deployment/egeria-base) which provides a simpler environment with just a single platform, and a single server, but configured with 
 persistence and auto start. This offers an example of a simple Kubernetes deployment.
 
 ### Graph Repository
-* Now implements the findEntities and fnidRelationships methods of the OMRS MetadataCollection API.
+* Now implements the findEntities and findRelationships methods of the OMRS MetadataCollection API.
 * Added detailed documentation for the graph repository
 
 ### Conformance Test Suite
