--- a/site/docs/release-notes/1-2.md
+++ b/site/docs/release-notes/1-2.md
@@ -13,12 +13,12 @@ conformant repositories.
 
 Below are the highlights:
   
-* A [conformance test suite](../open-metadata-conformance-suite)
+* A [conformance test suite](/guides/cts/overview)
   that validates implementations of open metadata repository connectors.
-  In addition we are highlighting the repositories that are conformant.
+  In addition, we are highlighting the repositories that are conformant.
   These are:
-     * The [JanusGraph metadata repository](../open-metadata-implementation/adapters/open-connectors/repository-services-connectors/open-metadata-collection-store-connectors/graph-repository-connector).
-     * The [In-memory metadata repository](../open-metadata-implementation/adapters/open-connectors/repository-services-connectors/open-metadata-collection-store-connectors/inmemory-repository-connector) used for testing and demos.
+     * The [JanusGraph metadata repository](/connectors/repository/janus-graph/overview).
+     * The [In-memory metadata repository](/connectors/repository/in-memory/overview) used for testing and demos.
      * The [Apache Atlas repository proxy](https://github.com/odpi/egeria-connector-apache-atlas).
      * The [IBM Information Governance Catalog repository proxy](https://github.com/odpi/egeria-connector-ibm-information-server).
 
@@ -35,12 +35,12 @@ Below are the highlights:
   they wish to access.
   
 * The [Open Metadata Repository Services (OMRS)](/services/omrs)
-  have been enhanced to support support dynamic types and type patching.
+  have been enhanced to support dynamic types and type patching.
   There is also function to load archives of metadata instances.
      
-* There are [tutorials](../open-metadata-resources/open-metadata-tutorials),
+* There are [tutorials](/education/tutorials),
   [hands-on labs](/education/open-metadata-labs/overview) and
-  [samples](../open-metadata-resources/open-metadata-samples) demonstrating
+  [samples](https://github.com/odpi/egeria/tree/main/open-metadata-resources/open-metadata-samples) demonstrating
   the new Asset cataloging capabilities.
 
 ## Egeria Implementation Status at Release 1.2
