--- a/site/docs/release-notes/1-5.md
+++ b/site/docs/release-notes/1-5.md
@@ -20,7 +20,7 @@ Additional, in Tech Preview, Data Engine OMAS, and a data engine proxy server.
 
 * There are new [tutorials](/education/tutorials),
   [hands-on labs](/education/open-metadata-labs/overview) and
-  [samples](../open-metadata-resources/open-metadata-samples) demonstrating
+  [samples](https://github.com/odpi/egeria/tree/main/open-metadata-resources/open-metadata-samples) demonstrating
   the new de-duplication detection features.
 
 ## Technical Previews
