--- a/site/docs/release-notes/3-13.md
+++ b/site/docs/release-notes/3-13.md
@@ -1,10 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 3.13 (Planned for November 2022)
-
-_**These are DRAFT release notes, initially copied from the previous release
-The notes will be updated until & when 3.13 is released**_
+# Release 3.13 (November 2022)
 
 ??? functional "Open Metadata Types"
 
@@ -24,4 +21,76 @@ The notes will be updated until & when 3.13 is released**_
     * New types to support digital subscriptions are added to model [0711](/types/7/0711-Digital-Subscription).
     * Relationship type [*DigitalServiceOperator*](/types/7/0715-Digital-Service-Ownership) can now link [*Teams*](/types/1/0115-Teams) rather than just [*Organizations*](/types/4/0440-Organizational-Controls) to a [DigitalService](/types/7/0710-Digital-Service).
 
---8<-- "snippets/abbr.md"
+
+??? warning "Known Issues"
+
+    This section highlights any significant issues to be aware of. Refer to our [GitHub Issues](https://github.com/odpi/egeria/issues) for a full list of open issues or to open a new one.
+
+    ??? info "Use chromium-based or Safari browser for UIs"
+         It is recommended to use a chromium-based browser such as Google Chrome, Microsoft Edge or Apple Safari for the Egeria Ecosystem UI. Some parts of the UI experience such as Dino currently experience problems with Firefox. See [odpi/egeria-react-ui#96 :material-dock-window:](https://github.com/odpi/egeria-react-ui/issues/96){ target=gh }.
+
+    ??? info "Ecosystem UI minor issues"
+
+        We are continuing to develop the Ecosystem UI & improve it's capability and usability. These are not regressions in this release. Known issues include:
+
+        * [odpi/egeria-react-ui#461](https://github.com/odpi/egeria-react-ui/issues/463){ target=gh } - Dino: cannot retrieve server audit log twice.
+        * [odpi/egeria-react-ui#465](https://github.com/odpi/egeria-react-ui/issues/463){ target=gh } - Dino: Error retrieving cohort information in Dino.
+        * [odpi/egeria-react-ui#464](https://github.com/odpi/egeria-react-ui/issues/464){ target=gh } - Buttons can appear off screen. Workaround is to enlarge window.
+        * [odpi/egeria-react-ui#465](https://github.com/odpi/egeria-react-ui/issues/465){ target=gh } - Search dialog still appears if no server selected.
+
+        See [odpi/egeria-react-ui](https://github.com/odpi/egeria-react-ui/issues){ target=gh } for all issues or to open a new one on this UI.
+
+    ??? info "Documentation Link errors"
+
+        We are aware of broken links in the documentation here, as well as broken links to the documentation contained within the Egeria code -
+        for example links to component information.
+
+        We are trying to fix these as we update the docs, but please raise any additional problems found in [egeria-docs](https://github.com/odpi/egeria-docs/issues){ target=gh }.
+        We would also be very grateful for any PRs that fix issues.
+
+??? functional "Helm Chart versions"
+
+    These charts may get updated more frequently than Egeria code releases, as we integrate other components and fix bugs. You can always check the latest with `helm repo update && helm search repo egeria `
+
+    Note that the Business UI remains at an older version, as the code is currently undergoing some refactoring.
+
+    To see known issues/upcoming work or to report issues see [egeria-charts](https://github.com/odpi/egeria-charts/issues){ target=gh }
+
+    ??? info "Tested environments"
+
+        The Egeria charts have been tested in:
+        
+        * Docker Desktop v4.12
+        * Kubernetes v1.25
+
+    ??? info "Lab Chart for 3.13"
+
+         The Egeria lab chart 3.13.0 has been updated to include:
+
+         * Egeria 3.13
+         * Egeria Ecosystem UI 3.8.0
+         * Egeria Business UI 3.2.2
+         * Strimzi 0.31.1 with Kafka 3.2.3
+         * Jupyter Notebook v3.5.0
+
+
+    ??? info "Base Chart for 3.13"
+
+         The Egeria base chart 3.12.0 has been updated to include:
+
+         * Egeria 3.13
+         * Egeria Ecosystem UI 3.8.0
+         * Strimzi 0.31.1 with Kafka 3.2.3
+
+
+    ??? info "CTS & PTS Charts for 3.13"
+
+         * Egeria 3.13
+         * Strimzi 0.31.1 with Kafka 3.2.3
+
+??? bugs "Bug fixes and other updates"
+
+    For details on core Egeria changes, see the [GitHub release note for 3.13](https://github.com/odpi/egeria/releases/tag/V3.13){ target=gh } and the full [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
+
+
+--8<-- "docs/snippets/abbr.md"
