--- a/site/docs/release-notes/3-14.md
+++ b/site/docs/release-notes/3-14.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 3.14 (Planned for early 2023)
+# Release 3.14 (December 2023)
 
 _**These are DRAFT release notes, initially copied from the previous release
 The notes will be updated until & when 3.14 is released**_
