Updates from dojo
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/3-14.md
+++ b/site/docs/release-notes/3-14.md
@@ -6,4 +6,10 @@
 _**These are DRAFT release notes, initially copied from the previous release
 The notes will be updated until & when 3.14 is released**_
 
+??? functional "Open Metadata Types"
+
+    * The [APIOperation](/types/5/0536-API-Schemas) is reestablished as an active TypeDef with the correct super type of [SchemaType](/types/5/0501-Schema-Elements)- this corrects the invalid update in V2.11.
+    * A new attribute called *serviceRequestType* has been added to the [*SupportedGovernanceService*](/types/4/0461-Governance-Engines) relationship type to Allow a mapping from a governance engine request type to a request type supported by a governance service.
+ 
+
 --8<-- "snippets/abbr.md"
