--- a/site/docs/release-notes/3-15.md
+++ b/site/docs/release-notes/3-15.md
@@ -8,7 +8,7 @@ The notes will be updated until & when 3.15 is released**_
 
 ??? functional "Open Metadata Types"
 
-    * A new attribute called *waitTime* has been added to the [*NextGovernanceActionType*](/types/4/0462-Governance-Action-Types) entity type to allow delays to be added into a process definition.
+    * A new attribute called *waitTime* has been added to the [*GovernanceActionType*](/types/4/0462-Governance-Action-Types) entity type to allow delays to be added into a process definition.
     * A new attribute called *completionMessage* has been added to the [*GovernanceAction*](/types/4/0463-Governance-Action) entity type to allow a message from the governance service on the results of the action or the reasons why it failed.
     * A new attribute called *completionMessage* has been added to the [*TargetForAction*](/types/4/0463-Governance-Action) relationship type to allow a message from the governance service on the results of the processing the target or the reasons why it failed.
 
