#438 correct old slack references
Signed-off-by: Nigel Jones <nigel.l.jones+git@gmail.com>

--- a/site/docs/release-notes/2-3.md
+++ b/site/docs/release-notes/2-3.md
@@ -15,7 +15,7 @@
    platforms, servers, services and cohort memberships.
  * Type Explorer & Repository Explorer, previously found in the Polymer based UI, are now available
    in Presentation Server.
- * Raise a github issue or Contact the Egeria team via slack  at slack.odpi.com if you experience issues or have questions.
+ * Raise a github issue or Contact the Egeria team via slack  at https://slack.lfaidata.foundation if you experience issues or have questions.
  * The Egeria Docker image is now based on Redhat's UBI-8 openjdk-11 image, to improve security & operational support. See issue #3580
  * Bug Fixes & ongoing feature work
 
