Add new type definition descriptions
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/3-5.md
+++ b/site/docs/release-notes/3-5.md
@@ -56,11 +56,10 @@
       None.
 
 ???+ bugs "Bug fixes and other updates"
-
-* 
-For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
+    * For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/releases/tag/V3.5){ target=gh }.
 
 ??? status "Implementation status"
-[![Egeria implementation status](latest.svg)](../roadmap)
+    * ![Egeria implementation status](latest.svg)
+    * [Roadmap](../roadmap)
 
 --8<-- "snippets/abbr.md"
