--- a/site/docs/release-notes/3-15.md
+++ b/site/docs/release-notes/3-15.md
@@ -11,6 +11,9 @@ The notes will be updated until & when 3.15 is released**_
     * A new attribute called *waitTime* has been added to the [*GovernanceActionType*](/types/4/0462-Governance-Action-Types) entity type to allow delays to be added into a process definition.
     * A new attribute called *completionMessage* has been added to the [*GovernanceAction*](/types/4/0463-Governance-Action) entity type to allow a message from the governance service on the results of the action or the reasons why it failed.
     * A new attribute called *completionMessage* has been added to the [*TargetForAction*](/types/4/0463-Governance-Action) relationship type to allow a message from the governance service on the results of the processing the target or the reasons why it failed.
-
+    * Appropriate properties have been added to the [*DigitalProduct*](/types/7/0710-Digital-Service) classification.  These were missing from its original definition in release 3.13.
+    * A new relationship called [*DigitalServiceProduct*](/types/7/0710-Digital-Service) links a *DigitalService* to a *DigitalProduct*.
+    * The [*DigitalServiceOperator*](/types/7/0715-Digital-Service-Ownership) can now be any *Referenceable* rather than being restricted to a *Team*.
+    * The [*SolutionLinkingWire*](/types/7/0735-Solution-Ports-and-Wires) relationship can link any *Referenceable* rather than being restricted to a *SolutionPort*.  This means that solution ports can be wired to [DigitalProducts](/types/7/0710-Digital-Service) and other artifacts that they interact with.
 
 --8<-- "snippets/abbr.md"
