--- a/site/docs/release-notes/1-0.md
+++ b/site/docs/release-notes/1-0.md
@@ -4,30 +4,19 @@
 
 # Release 1.0 (February 2019)
 
-Release 1.0 provides the open metadata integration and exchange between
-metadata repositories:
+Release 1.0 provides the open metadata integration and exchange between metadata repositories:
 
-* The [Open Connector Framework (OCF)](/frameworks/ocf/overview/)
-  provides standard interfaces for implementing connectors.  These are used
-  to access the data stored in [Assets](/concepts/asset/)
-  and to plug in platform capabilities into the Open Metadata Repository Services (OMRS).
+* The [Open Connector Framework (OCF)](/frameworks/ocf/overview) provides standard interfaces for implementing connectors.  These are used to access the data stored in [Assets](/concepts/asset) and to plug in platform capabilities into the Open Metadata Repository Services (OMRS).
 
-* The implementation of the [Open Metadata Repository Services (OMRS)](/services/omrs/).
-  The repository services provide support for the [open metadata types](/types/),
-  the interfaces used by a repository technology the wants to support the
-  open metadata protocols, the event management for open metadata replication
-  and the cohort registration and management.
+* The implementation of the [Open Metadata Repository Services (OMRS)](/services/omrs). The repository services provide support for the [open metadata types](/types), the interfaces used by a repository technology the wants to support the open metadata protocols, the event management for open metadata replication and the cohort registration and management.
   
-  The repository services can be used as embeddable libraries
-  in technologies that wish to participate in an
-  [open metadata repository cohort](/services/omrs/cohort/).
+  The repository services can be used as embeddable libraries in technologies that wish to participate in an [open metadata repository cohort](/services/omrs/cohort).
 
 
 ## Egeria Implementation Status at Release 1.0
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.0.png)
  
- Link to Egeria's [Roadmap](/release-notes/roadmap/) for more details about the
- Open Metadata and Governance vision, strategy and content.
+ Link to Egeria's [Roadmap](/release-notes/roadmap) for more details about the Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
