Tidy up release notes
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/1-0.md
+++ b/site/docs/release-notes/1-0.md
@@ -2,7 +2,7 @@
 <!-- Copyright Contributors to the Egeria project. -->
 
 
-# Release 1.0 (February 2019)
+## Release 1.0 (February 2019)
 
 Release 1.0 provides the open metadata integration and exchange between metadata repositories:
 
@@ -13,10 +13,10 @@ Release 1.0 provides the open metadata integration and exchange between metadata
   The repository services can be used as embeddable libraries in technologies that wish to participate in an [open metadata repository cohort](/services/omrs/cohort).
 
 
-## Egeria Implementation Status at Release 1.0
+??? info "Egeria Implementation Status at Release 1.0"
  
-![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.0.png)
+    ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.0.png)
  
- Link to Egeria's [Roadmap](/release-notes/roadmap) for more details about the Open Metadata and Governance vision, strategy and content.
+     Link to Egeria's [Roadmap](/release-notes/roadmap) for more details about the Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
