--- a/site/docs/release-notes/1-4.md
+++ b/site/docs/release-notes/1-4.md
@@ -1,11 +1,11 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 1.4 (February 2020)
+## Release 1.4 (February 2020)
 
 Release 1.4 focused on bug fixes and documentation.
 
-## Egeria Implementation Status at Release 1.4
+### Egeria Implementation Status at Release 1.4
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.4.png)
  
