--- a/site/docs/release-notes/1-6.md
+++ b/site/docs/release-notes/1-6.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 1.6 (April 2020)
+## Release 1.6 (April 2020)
 
 Release 1.6 adds support for:
    * Audit Log Framework (ALF) technical preview
@@ -23,7 +23,7 @@ Below are the highlights:
   
   For a full list refer to the git commit logs.
   
-## Egeria Implementation Status at Release 1.6
+### Egeria Implementation Status at Release 1.6
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.6.png)
  
