--- a/site/docs/release-notes/2-5.md
+++ b/site/docs/release-notes/2-5.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 2.5 (December 2020)
+## Release 2.5 (December 2020)
 
 Below are the highlights of the 2.5 release:
 
@@ -10,7 +10,7 @@ Below are the highlights of the 2.5 release:
    
   * The Type Explorer UI
   
-     * supports options to show/hide deprecated types and/or deprecated attributes. Please refer to the Type Explorer help.md for details.
+     * new options to show/hide deprecated types and/or deprecated attributes. Please refer to the Type Explorer help.md for details.
      * preserves the user-selected focus type across reloads of type information from the repository server.
       
   * The Repository Explorer UI
@@ -44,7 +44,7 @@ Below are the highlights of the 2.5 release:
 
 
 
-## Egeria Implementation Status at Release 2.5
+### Egeria Implementation Status at Release 2.5
 
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.5.png)
 
