--- a/site/docs/release-notes/2-9.md
+++ b/site/docs/release-notes/2-9.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 2.9 (May 2021)
+## Release 2.9 (May 2021)
 
 Release 2.9 adds:
 
@@ -10,9 +10,9 @@ Release 2.9 adds:
 
 Details of these and other changes are in the sections that follow.
 
-## Description of Changes
+### Description of Changes
 
-### Metadata Types
+#### Metadata Types
 
 * The **UserProfileManager**, **UserAccessDirectory** and **MasterDataManager** classification for **Referenceables** has been added
 to model [0056 resource Managers](/types/0/0056-Resource-Managers).
@@ -29,7 +29,7 @@ model [0534 Relational Schema](/types/5/0534-Relational-Schemas.md).
 only allows for a column to be primitive. It could be a literal, enum or external and so this type has been deprecated
 and the appropriate schema types should be used directly.
 
-### Building Egeria on Windows
+#### Building Egeria on Windows
 
 To build Egeria on Windows you should use [Windows Subsystem for Linux](https://docs.microsoft.com/en-us/windows/wsl/) Version 2 or above & install an 
 appropriate Linux distribution.
@@ -40,18 +40,18 @@ IDEs such as IntelliJ and VSCode support editing and code management within the 
 
 See [PR #5084](https://github.com/odpi/egeria/pull/5084) for more information.
 
-### Bug fixes and other updates
+#### Bug fixes and other updates
 * Additional Bug Fixes
 * Dependency Updates
 
 For details on both see the commit history in GitHub.
 
-## Known Issues
+### Known Issues
 
 * It is recommended to use a chromium-based browser such as Google Chrome or Microsoft Edge, or Apple Safari for the Egeria React UI. Some parts of the UI experience such as Dino currently experience problems with Firefox. See [odpi/egeria-react-ui#96](https://github.com/odpi/egeria-react-ui/issues/96) .
 * When running the 'Understanding Platform Services' lab, ensure you run the 'egeria-service-config' notebook first and do not restart the python kernel before running this lab. See [#4842](https://github.com/odpi/egeria/issues/4842).
 
-# Egeria Implementation Status at Release 2.9
+### Egeria Implementation Status at Release 2.9
 
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.9.png)
 
@@ -59,8 +59,6 @@ Link to Egeria's [Roadmap](/release-notes/roadmap/) for more details about the
 Open Metadata and Governance vision, strategy and content.
 
 
-# Further Help and Support
 
-See the [Community Guide](/guides/community).
 
 --8<-- "snippets/abbr.md"
