--- a/site/docs/release-notes/3-1.md
+++ b/site/docs/release-notes/3-1.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 3.1 (September 2021)
+## Release 3.1 (September 2021)
 
 !!! danger "Special note on Java support"
 
@@ -47,6 +47,6 @@
     For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
 
 ??? status "Implementation status"
-    [![Egeria implementation status](latest.svg)](/release-notes/roadmap/)
+    [![Egeria implementation status](functional-organization-showing-implementation-status-for-3-1.svg)](/release-notes/roadmap)
 
 --8<-- "snippets/abbr.md"
