--- a/site/docs/release-notes/3-14.md
+++ b/site/docs/release-notes/3-14.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 3.14 (December 2022)
+## Release 3.14 (December 2022)
 
 
 ??? functional "Open Metadata Types"
