--- a/site/docs/release-notes/3-2.md
+++ b/site/docs/release-notes/3-2.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 3.1 (September 2021)
+## Release 3.2 (October 2021)
 
 ??? info "Known issue: use chromium-based browser for UIs"
     
@@ -30,7 +30,7 @@
         
         Please continue to refer to the main documentation site for any missing content until this migration is complete.
     
-    ??? deprecated "Dcoker compose"
+    ??? deprecated "Docker compose"
         The docker-compose environment was deprecated in release [3.1](3-1.md). It will be removed in release [3.3](3-3.md). See [odpi/egeria#5721 :material-dock-window:](https://github.com/odpi/egeria/issues/5721){ target=gh }. 
 
 ???+ types "Type changes: :material-plus-circle: added, :material-adjust: modified, :material-alert-circle: deprecated"
@@ -46,6 +46,6 @@
     For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
 
 ??? status "Implementation status"
-    [![Egeria implementation status](latest.svg)](/release-notes/roadmap/)
+    [![Egeria implementation status](functional-organization-showing-implementation-status-for-3-2.svg)](/release-notes/roadmap)
 
 --8<-- "snippets/abbr.md"
