--- a/site/docs/release-notes/1-1.md
+++ b/site/docs/release-notes/1-1.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 1.1 (November 2019)
+## Release 1.1 (November 2019)
 
 Release 1.1 focuses on establishing a secure, multi-tenant platform for
 metadata servers and governance servers.
@@ -36,26 +36,18 @@ Below are the highlights:
   
 * There is a new user interface to explore the open metadata types.  It is called the **Type Explorer**.
 
-## Code fixes and changes to released function
+??? functional "Code fixes and changes to released function"
 
-*  Release 1.1 fixes a problem in the open metadata cohort registration when
-   there was a metadata server without a local repository.  The wrong registration
-   message was being used which meant that the registration details were not being properly
-   distributed around the cohort.
+    *  Release 1.1 fixes a problem in the open metadata cohort registration when there was a metadata server without a local repository.  The wrong registration message was being used which meant that the registration details were not being properly distributed around the cohort.
    
-*  Release 1.1 changed the type of the AdditionalProperties from a map of String to Object to a map of
-   String to String in order to match the open metadata types.  There is a new property called
-   ConfigurationProperties which is a map from String to Object.
+    *  Release 1.1 changed the type of the AdditionalProperties from a map of String to Object to a map of String to String in order to match the open metadata types.  There is a new property called ConfigurationProperties which is a map from String to Object.
    
-*  Release 1.1 changed the implementation of the data primitive type from
-   a Java Date object to a Java Long object.  This was to overcome a problem
-   deserialization dates from JSON to Java.
+    *  Release 1.1 changed the implementation of the data primitive type from a Java Date object to a Java Long object.  This was to overcome a problem deserialization dates from JSON to Java.
 
-## Egeria Implementation Status at Release 1.1
+??? info "Egeria Implementation Status at Release 1.1"
  
-![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.1.png)
+    ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.1.png)
  
- Link to Egeria's [Roadmap](/release-notes/roadmap/) for more details about the
- Open Metadata and Governance vision, strategy and content.
+    Link to Egeria's [Roadmap](/release-notes/roadmap/) for more details about the Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
