--- a/site/docs/release-notes/1-2.md
+++ b/site/docs/release-notes/1-2.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 1.2 (December 2019)
+## Release 1.2 (December 2019)
 
 Release 1.2 provides the ability to build an asset catalog, search for assets and also
 access the data and function provided by these assets.
@@ -43,7 +43,7 @@ Below are the highlights:
   [samples](https://github.com/odpi/egeria/tree/main/open-metadata-resources/open-metadata-samples) demonstrating
   the new Asset cataloging capabilities.
 
-## Egeria Implementation Status at Release 1.2
+### Egeria Implementation Status at Release 1.2
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.2.png)
  
