--- a/site/docs/release-notes/1-3.md
+++ b/site/docs/release-notes/1-3.md
@@ -1,10 +1,10 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 1.3 (January 2020)
+## Release 1.3 (January 2020)
 
 Release 1.3 focuses on the support for open metadata archives, and formal versioning of open metadata types.
-It includes much of the ground-work for
+It includes much of the groundwork for
 supporting design lineage and the detection and management of duplicate assets but that function is officially
 released in [1.4](/release-notes/1-4).
 
@@ -51,7 +51,7 @@ Below are the highlights of the 1.3 release:
 
       * Improvements to HTTP response checking and reporting of errors
 
-## Egeria Implementation Status at Release 1.3
+### Egeria Implementation Status at Release 1.3
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.3.png)
  
