--- a/site/docs/release-notes/1-5.md
+++ b/site/docs/release-notes/1-5.md
@@ -1,12 +1,12 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 1.5 (March 2020)
+## Release 1.5 (March 2020)
 
 Release 1.5 delivers the automatic metadata discovery of duplicate assets.
 Additional, in Tech Preview, Data Engine OMAS, and a data engine proxy server.
 
-## Released Components
+### Released Components
 
 * The first governance server is released:
   * The [Discovery Server](/fraameworks/odf/overview/#discovery-server) supports the scanning of assets and the notification when duplicate suspects are detected.
@@ -23,7 +23,7 @@ Additional, in Tech Preview, Data Engine OMAS, and a data engine proxy server.
   [samples](https://github.com/odpi/egeria/tree/main/open-metadata-resources/open-metadata-samples) demonstrating
   the new de-duplication detection features.
 
-## Technical Previews
+### Technical Previews
 
    * The [Data Engine OMAS](/services/omas/data-engine/overview) supports the processing of notifications from data engines such as ETL platforms in order to catalog information about the data movement, transformation and copying they are engaged in.
    
@@ -32,7 +32,7 @@ Additional, in Tech Preview, Data Engine OMAS, and a data engine proxy server.
      in order to catalog information about the data movement, transformation and copying they are engaged in.
      It calls the Data Engine OMAS.
 
-## Egeria Implementation Status at Release 1.5
+### Egeria Implementation Status at Release 1.5
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.5.png)
  
