--- a/site/docs/release-notes/1-7.md
+++ b/site/docs/release-notes/1-7.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 1.7 (May 2020)
+## Release 1.7 (May 2020)
 
 Release 1.7 contains many bug fixes & preparatory development work for future new features.
 
@@ -18,12 +18,12 @@ Below are the highlights:
   
   For a full list refer to the git commit logs.
 
-## Known Issues
+### Known Issues
 
 * (https://github.com/odpi/egeria/issues/2935)[2935] - Governance Engine OMAS reports exception when entities added
 * (https://github.com/odpi/egeria/issues/3005)[3005] - Occasional failure in 'Building a Data Catalog' notebook
 
-## Egeria Implementation Status at Release 1.7
+### Egeria Implementation Status at Release 1.7
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.7.png)
  
