--- a/site/docs/release-notes/1-8.md
+++ b/site/docs/release-notes/1-8.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 1.8 (June 2020)
+## Release 1.8 (June 2020)
 
 Below are the highlights of Release 1.8:
 
@@ -18,7 +18,7 @@ Below are the highlights of Release 1.8:
     * Spring has been updated to 5.2.6
     * Spring Boot, Spring Security, Spring Security, Spring Data have been updated to 2.3.0
 
-## Egeria Implementation Status at Release 1.8
+### Egeria Implementation Status at Release 1.8
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.8.png)
  
