--- a/site/docs/release-notes/2-0.md
+++ b/site/docs/release-notes/2-0.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 2.0 (July 2020)
+## Release 2.0 (July 2020)
 
 Release 2.0 adds support for:
 
@@ -15,7 +15,7 @@ Below are the highlights:
 - Docker containers, docker-compose scripts, kubernetes deployments have all been updated to use https accordingly.
 - The [Encrypted Configuration File Store Connector :material-dock-window:](https://github.com/odpi/egeria/tree/main/open-metadata-implementation/adapters/open-connectors/configuration-store-connectors/configuration-encrypted-file-store-connector){ target=lf } is now used by default to ensure security of sensitive configuration details like credentials.
 
-## Egeria Implementation Status at Release 2.0
+### Egeria Implementation Status at Release 2.0
  
  ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.0.png)
  
