--- a/site/docs/release-notes/2-1.md
+++ b/site/docs/release-notes/2-1.md
@@ -1,11 +1,11 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 2.1 (August 2020)
+## Release 2.1 (August 2020)
 
 Release 2.1 primarily contains bug fixes and preparatory work for future capabilities.
 
-A full list of changes can be seen [by comparing on github](https://github.com/odpi/egeria/compare/egeria-release-2.0...egeria-release-2.1) .
+A full list of changes can be seen [by comparing on github](https://github.com/odpi/egeria/compare/egeria-release-2.0...egeria-release-2.1).
 
 The highlights include:
 
@@ -16,7 +16,7 @@ The highlights include:
   - Spring updated to 5.2.8
   - additional dependencies to remain current
   
-## Egeria Implementation Status at Release 2.1
+### Egeria Implementation Status at Release 2.1
  
  ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.1.png)
  
