--- a/site/docs/release-notes/2-11.md
+++ b/site/docs/release-notes/2-11.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## 2.11 (July 2021)
+## Release 2.11 (July 2021)
 
 !!! danger "Special note on Java support"
     This is expected to be the last release supporting Java 8. The next release will commence the 3.x series of
@@ -157,6 +157,6 @@
     For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits/egeria-release-2.11){ target=gh }.
 
 ??? status "Implementation status"
-    ![Egeria implementation status](2-11.svg)](/release-notes/roadmap/)
+    ![Egeria implementation status](functional-organization-showing-implementation-status-for-2-11.svg)](/release-notes/roadmap/)
 
 --8<-- "snippets/abbr.md"
