--- a/site/docs/release-notes/2-3.md
+++ b/site/docs/release-notes/2-3.md
@@ -1,9 +1,9 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 2.3 (October 2020)
+## Release 2.3 (October 2020)
 
-## New capabilities & Major changes
+### New capabilities & Major changes
  * A new Presentation Server User interface has been added, making use of [React](https://reactjs.org/) & [Carbon](https://www.carbondesignsystem.com/) 
    - Presentation Server is still in development
    - For developers not contributing to Presentation Server, running in a container under Kubernetes or docker-compose is the easiest way to get started
@@ -19,19 +19,19 @@
  * The Egeria Docker image is now based on Redhat's UBI-8 openjdk-11 image, to improve security & operational support. See issue #3580
  * Bug Fixes & ongoing feature work
 
-## Known Issues
+### Known Issues
  * Several maven artifacts have not been published to maven central/JCenter. See issue #3675 They can be retrieved from JFrog Artifactory at 'https://odpi.jfrog.io/odpi/egeria-release-local' if needed and it is not possible to build locally.
    - org.odpi.egeria:presentation-server
    - org.odpi.egeria:subject-area-fvt
    - org.odpi.egeria:dev-ops-api
    - org.odpi.egeria:digital-service-spring
    
-## Dependencies
+### Dependencies
  * Spring has been updated to 2.3.9
  * Spring Security has been updated to 5.4.0
  * For a full list run 'mvn dependency:tree' against top level directory and/or review the top level pom.xml
  
- ## Egeria Implementation Status at Release 2.3
+### Egeria Implementation Status at Release 2.3
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.3.png)
  
