--- a/site/docs/release-notes/2-4.md
+++ b/site/docs/release-notes/2-4.md
@@ -1,9 +1,9 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 2.4 (November 2020)
+## Release 2.4 (November 2020)
 
-* The [Integration Daemon](https://github.com/odpi/egeria/blob/main/open-metadata-implementation/admin-services/docs/concepts/integration-daemon.md)
+* The [Integration Daemon](/concepts/integration-daemon)
   now makes it simpler to exchange metadata with third party technology such as catalogs and databases.
 * The Repository Explorer User Interface ('REX') must now be configured with a list of available 
   platforms and servers to improve security and usability. 
@@ -28,14 +28,14 @@
   * Spring Boot has been updated to 2.3.3
   * For a full list run 'mvn dependency:tree' against top level directory and/or review the top level pom.xml
 
-## Known Issues
+### Known Issues
 
 * The docker-compose based lab environment is incorrectly pulling docker images from the wrong repository.  To correct this change `open-metadata-resources/open-metadata-deployment/compose/tutorials/.env` to `egeria_repo=odpi`. The original repository
 has however been updated to include 2.4 images, so will now work even if unchanged.
 
 
 
-## Egeria Implementation Status at Release 2.4
+### Egeria Implementation Status at Release 2.4
 
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.4.png)
 
