--- a/site/docs/release-notes/2-6.md
+++ b/site/docs/release-notes/2-6.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 2.6 (February 2021)
+## Release 2.6 (February 2021)
 
 Release 2.6 adds support for:
 
@@ -13,12 +13,12 @@ Release 2.6 adds support for:
    the software development lifecycle and analytics models.
    
 The release also changes the default location of some important files in order to facilitate deployment
-and seperate program files from writeable data. 
+and separate program files from writeable data. 
 
 Details of these and other changes are in the sections that follow.
 
-## Description of Changes
-### Changes to data files created/used by Egeria
+### Description of Changes
+#### Changes to data files created/used by Egeria
 
 Up to and including release 2.5, various data files were created in the current working directory when Egeria was run. This included
 configuration files, cohort information, graph repositories etc.  This made it difficult to manage Egeria in a container environment
@@ -41,7 +41,7 @@ so this can be mapped to a volume easily.
 
 If you have already explicitly configured the relevant connector yourself there will be no change. this updates the defaults only.
 
-### Removal of the Discovery Server and Stewardship Server
+#### Removal of the Discovery Server and Stewardship Server
  
 The Discovery Server, Stewardship Server, Virtualizer and Security Officer Server have been consolidated into a new
 type of server called the [Engine Host OMAG Server](/concepts/engine-host). 
@@ -57,7 +57,7 @@ the Governance Server Services and
 [Server Administration](/services/admin-services/overview).
 With this change it will also be easier for Egeria to host other types of governance engines such as Palisade and Gaian.
 
-### New open metadata types for Governance Actions
+#### New open metadata types for Governance Actions
 
 The following types have been added to support the governance action engines:
 
@@ -65,21 +65,21 @@ The following types have been added to support the governance action engines:
 * [0462 Governance Action Types](/types/4/0462-Governance-Action-Types)
 * [0463 Governance Actions](/types/4/0463-Governance-Actions)
 
-### Updates to open metadata types for Lineage Mapping
+#### Updates to open metadata types for Lineage Mapping
 
 The [LineageMapping](/types/7/0770-Lineage-Mapping)
 open metadata relationship type has been updated to link **Referenceables** rather than **SchemaElements**.
 This is to capture lineage between components at different levels of detail since the data field mappings may not
 always be available. Lineage mapping is described in more detail in [lineage management](/features/lineage-management/overview).
 
-### New open metadata types for Duplicate Processing
+#### New open metadata types for Duplicate Processing
 
 Since Egeria is integrating and distributing metadata from many different sources, it is inevitable that
 there will be multiple metadata instances that represent the same real-world "thing".  The 
 [0465 Duplicate Processing](/types/4/0465-Duplicate-Processing.md)
 types allow these elements to be linked together.
 
-### Presentation Server / React UI
+#### Presentation Server / React UI
 
 * The node based User Interface component known as 'Presentation Server' has now fully moved to it's own
 [GitHub Repository](https://github.com/odpi/egeria-react-ui). 
@@ -89,28 +89,29 @@ types allow these elements to be linked together.
 Enterprise queries are now the default, but can be over-ridden to perform a local operation.
 * At this time 'Server Author' and 'Glossary Author' are still in development.
 
-### New Helm Chart
+#### New Helm Chart
 
 In addition to our 'lab' helm chart to support the Coco Pharmaceuticals environment, we have now added an [additional
 helm chart](https://github.com/odpi/egeria/tree/main/open-metadata-resources/open-metadata-deployment/egeria-base) which provides a simpler environment with just a single platform, and a single server, but configured with 
 persistence and auto start. This offers an example of a simple Kubernetes deployment.
 
-### Graph Repository
+#### Graph Repository
 * Now implements the findEntities and findRelationships methods of the OMRS MetadataCollection API.
 * Added detailed documentation for the graph repository
 
-### Conformance Test Suite
+#### Conformance Test Suite
 * CTS now has tests for findEntities and findRelationships methods and search tests have been realigned into profiles so that all search operations are in optional profiles, with basic and advanced profiles for each of entities and relationships.
 
-### Other changes
+#### Other changes
 
 Release 2.6 also contains many bug fixes and minor improvements & dependency updates
-### Removals and Deprecations
+
+#### Removals and Deprecations
 
 * Discovery Server, Stewardship Server, Virtualizer and Security Officer Server have been replaced with more extensive capability - see above.
 * Information View OMAS has now been removed following earlier deprecation.
 
-# Egeria Implementation Status at Release 2.6
+### Egeria Implementation Status at Release 2.6
 
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.6.png)
 
@@ -118,7 +119,7 @@ Link to Egeria's [Roadmap](/release-notes/roadmap/) for more details about the
 Open Metadata and Governance vision, strategy and content.
 
 
-# Further Help and Support
+### Further Help and Support
 
 As part of the Linux AI & Data Foundation, our Slack channels have moved to the [LF AI & Data Slack workspace](https://slack.lfaidata.foundation){ target=lf }, and our mailing lists can now be found at https://lists.lfaidata.foundation/groups
 
