--- a/site/docs/release-notes/3-0.md
+++ b/site/docs/release-notes/3-0.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 3.0 (August 2021)
+## Release 3.0 (August 2021)
 
 !!! danger "Special note on Java support"
     Java 11 is now **required** to build and run Egeria.
@@ -34,6 +34,6 @@
     For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits/egeria-release-3.0){ target=gh }.
 
 ??? status "Implementation status"
-    [![Egeria implementation status](latest.svg)](/release-notes/roadmap/)
+    [![Egeria implementation status](functional-organization-showing-implementation-status-for-3-0.svg)](/release-notes/roadmap)
 
 --8<-- "snippets/abbr.md"
