--- a/site/docs/release-notes/3-15.md
+++ b/site/docs/release-notes/3-15.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 3.15 (January 2022)
+## Release 3.15 (January 2022)
 
 _**These are DRAFT release notes, initially copied from the previous release
 The notes will be updated until & when 3.15 is released**_
