--- a/site/docs/release-notes/3-5.md
+++ b/site/docs/release-notes/3-5.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 3.5 (February 2022)
+## Release 3.5 (February 2022)
 
 ??? warning "Known Issues"
 
@@ -59,7 +59,6 @@
     * For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/releases/tag/V3.5){ target=gh }.
 
 ??? status "Implementation status"
-    * ![Egeria implementation status](latest.svg)
-    * [Roadmap](../roadmap)
+    [![Egeria implementation status](functional-organization-showing-implementation-status-for-3-5.svg)](/release-notes/roadmap)
 
 --8<-- "snippets/abbr.md"
