Update links for 3.15 and add warning about last 3.x release. correct dates
Signed-off-by: Nigel Jones <nigel.l.jones+git@gmail.com>

--- a/site/docs/release-notes/3-15.md
+++ b/site/docs/release-notes/3-15.md
@@ -1,7 +1,14 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 3.15 (January 2023)
+## Release 3.15 (February 2023)
+
+??? info "Last 3.x release"
+
+    * This is the last planned 3.x release, and the last release supporting Java 11 and Maven
+    * The next release is expected to be 4.0
+    * 4.0 will require Java 17 or later, and will be built using Gradle
+    * 4.0 is expected to release by early April 2023
 
 ??? functional "Open Metadata Types"
 
